--- a/students/senay/Node-JS/dia-07-03/src/package.json
+++ b/students/senay/Node-JS/dia-07-03/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-mvc",
+  "name": "src",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
